Final Version ND 1.0